# weather-scheduler-api

./: .gitignore  LICENSE  README.md  app_ctl.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: run_tests.yml
api/: db.py  logging.py  main.py  models.py  scheduler.py  utils.py  weather.py
tests/: conftest.py  test_api.py  test_utils.py  test_weather.py
